# GA-EpiRepo

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: pr_to_dev.yml  run_tests.yml  to_main.yml
include/: calculator.hpp
src/: calculator.cpp  main.cpp
tests/: test_calculator.cpp
